<resources>
    <string name="app_name">Calculator</string>
    <string name="button">Button</string>
    <string name="calculator">Calculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_p">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_mi">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_do">.</string>
    <string name="_mo">%</string>
    <string name="_di">/</string>
    <string name="_e">=</string>
    <string name="clear">Clear</string>
    <string name="_eq">=</string>
</resources>